Insert ZeMA-machine-learning-tutorials

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "agentMet4FoF"]
 	path = agentMet4FoF
 	url = https://github.com/bangxiangyong/agentMet4FoF.git
+[submodule "ZeMA-machine-learning-tutorials"]
+	path = ZeMA-machine-learning-tutorials
+	url = https://github.com/harislulic/ZeMA-machine-learning-tutorials.git
