--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,8 @@ jobs:
           name: Run PyDynamic tests
           command: |
             . venv/bin/activate
-            pytest -v --cov=PyDynamic/ PyDynamic/ > test-reports/PyDynamic.log
+            pytest -v --cov-config=PyDynamic/.coveragerc --cov=PyDynamic/ \
+            PyDynamic/ > test-reports/PyDynamic.log
             codecov
 
       # Since there are no tests yet, we wait for them to uncomment this.
@@ -69,7 +70,8 @@ jobs:
       #    name: Run agentMet4FoF tests
       #    command: |
       #      . venv/bin/activate
-      #      pytest -v --cov=agentMet4FoF/ agentMet4FoF/ > - test-reports/agentMet4FoF.log
+      #      pytest -v --cov=agentMet4FoF/ agentMet4FoF/ > \
+      #      test-reports/agentMet4FoF.log
       #      codecov
 
       # Store test results.
