Remove strange test-reports path in CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
       - run:
           name: Create test result folder
           command: |
-            mkdir &testresultfolder test-reports
-            mkdir *testresultfolder/PyDynamic
+            mkdir test-reports
+            mkdir test-reports/PyDynamic
 
       # Download and cache dependencies
       - restore_cache:
