--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,28 +57,26 @@ jobs:
           name: Run PyDynamic tests
           command: |
             . venv/bin/activate
-            pytest -v --cov-report xml:PyDynamic.xml --cov-report term \
+            pytest -v --cov-report \
+            xml:test-reports/PyDynamic/coverage.xml --cov-report term \
             --junitxml=test-reports/PyDynamic/pytest.xml \
             --cov-config=.coveragerc --cov=PyDynamic/ PyDynamic/ > \
-            test-reports/PyDynamic.log
-            ls
-            more PyDynamic.xml
-            bash <(curl -s https://codecov.io/bash) -c -f PyDynamic.xml \
-            -F PyDynamic
+            test-reports/PyDynamic/PyDynamic.log
+            bash <(curl -s https://codecov.io/bash) -c \
+            -f test-reports/PyDynamic/coverage.xml -F PyDynamic
 
       # Run tests with coverage report! We use pytest's test-runner.
       - run:
           name: Run agentMet4FoF tests
           command: |
             . venv/bin/activate
-            pytest -v --cov-report xml:agentMet4FoF.xml --cov-report term \
+            pytest -v --cov-report \
+            xml:test-reports/agentMet4FoF/coverage.xml --cov-report term \
             --junitxml=test-reports/agentMet4FoF/pytest.xml \
             --cov-config=.coveragerc --cov=agentMet4FoF/ agentMet4FoF/ > \
-            test-reports/agentMet4FoF.log
-            ls
-            more agentMet4FoF.xml
-            bash <(curl -s https://codecov.io/bash) -c -f agentMet4FoF.xml \
-            -F agentMet4FoF
+            test-reports/agentMet4FoF/agentMet4FoF.log
+            bash <(curl -s https://codecov.io/bash) -c \
+            -f test-reports/agentMet4FoF/coverage.xml -F agentMet4FoF
 
       # Upload coverage report.
       - run:
