--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           command: |
             . venv/bin/activate
             pytest -v --junitxml=test-reports/PyDynamic/pytest.xml \
-            --cov-config=PyDynamic/.coveragerc --cov=PyDynamic/ PyDynamic/ > \
+            --cov-config=PyDynamic/.coveragerc --cov=/ PyDynamic/ > \
             test-reports/PyDynamic/PyDynamic.log
             bash <(curl -s https://codecov.io/bash) -c -F PyDynamic
 
@@ -68,7 +68,7 @@ jobs:
           command: |
             . venv/bin/activate
             pytest -v --junitxml=test-reports/agentMet4FoF/pytest.xml \
-            --cov-config=agentMet4FoF/.coveragerc --cov=agentMet4FoF/ \
+            --cov-config=agentMet4FoF/.coveragerc --cov=/ \
             agentMet4FoF/ > test-reports/agentMet4FoF/agentMet4FoF.log
             bash <(curl -s https://codecov.io/bash) -c -F agentMet4FoF
 
