--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r PyDynamic/requirements.txt
+            pip install pytest pytest-cov
 
       - save_cache:
           paths:
@@ -104,6 +105,7 @@ jobs:
            python3 -m venv venv
            . venv/bin/activate
            pip install -r agentMET4FOF/requirements.txt
+           pip install pytest pytest-cov
 
       - save_cache:
           paths:
